--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div
         class="cinfra"
         data-embed-token="4435dea4434f11aea53593ffe454bf12e192acee2ae503e5eb9efb8db470da00"
-        data-currency="USD"
-        data-amount="10000"
+        data-btc="0.0020"
+        data-doge="1210.5"
+        data-eth="0.105"
+        data-xmr="0.75"
     ></div>
 </body>
-
-
 
 </html>
