--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
-    <script src="dist/bundle.js"></script>
+    <!-- <script src="dist/bundle.js"></script> -->
+    <script src="https://cdn.posfra.com/embed.js"></script>
 </head>
 
 <body>
     <h2>Client page</h2>
     <div
-        class="cinfra"
+        class="posfra"
         data-embed-token="4435dea4434f11aea53593ffe454bf12e192acee2ae503e5eb9efb8db470da00"
         data-btc="0.0020"
         data-doge="1210.5"
