--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-    <!-- <script src="dist/bundle.js"></script> -->
-    <script src="https://cdn.posfra.com/embed.js"></script>
+    <script src="dist/embed.js"></script>
+    <!-- <script src="https://cdn.posfra.com/embed.js"></script> -->
 </head>
 
 <body>
     <h2>Client page</h2>
     <div
         class="posfra"
-        data-embed-token="4435dea4434f11aea53593ffe454bf12e192acee2ae503e5eb9efb8db470da00"
+        data-embed-token="43a2ff448e590a810c70dad398c959f9f5cef7569b41274c619edee9e9433932"
         data-btc="0.0020"
         data-doge="1210.5"
         data-eth="0.105"
