--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         data-doge="1210.5"
         data-eth="0.105"
         data-xmr="0.75"
+        data-meta="{email: 'anthony@posfra.com'}"
+        data-redirect-url="https://anthonybudd.io"
     ></div>
 </body>
 
