--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <div
         class="posfra"
         data-embed-token="43a2ff448e590a810c70dad398c959f9f5cef7569b41274c619edee9e9433932"
-        data-btc="0.0020"
+        data-no-warning
+        data-btc="0.0002"
+        data-allow-custom
+        data-meta="FOO BAR 123"
     ></div>
+    <!-- data-btc="0.0002" -->
 </body>
 
 </html>
