--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         data-no-warning
         data-btc="0.0002"
         data-allow-custom
-        data-meta="FOO BAR 123"
+        data-allow-message
+        data-meta="META_DATA"
     ></div>
     <!-- data-btc="0.0002" -->
 </body>
