Special Token Support

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
     <script src="dist/embed.js"></script>
     <!-- <script src="https://cdn.posfra.com/embed.js"></script> -->
+
+    <style>
+        html,
+        body {
+            background-color: #000;
+            color: #fff;
+        }
+    </style>
 </head>
 
 <body>
@@ -11,7 +19,8 @@
 
     <div
         class="posfra"
-        data-embed-token="43a2ff448e590a810c70dad398c959f9f5cef7569b41274c619edee9e9433932"
+        data-embed-token="aaa2ff448e590a810c70dad398c959f9f5cef7569b41274c619edee9e943393a"
+        data-username="sports-inc"
         data-no-warning
         data-btc="0.0002"
         data-allow-custom
