--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             height: 100%;
             width: 100%;
             background-color: rgba(166, 166, 166, .5);
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             z-index: 99999;
