--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             color: white;
             padding: 12px 24px;
             min-width: 250px;
-            min-height: 25px;
+            min-height: 50px;
             border-radius: 8px;
             border: none;
             font-size: 16px;
@@ -39,6 +39,7 @@
             text-decoration: none;
             position: relative;
             transition: all 0.3s ease;
+            margin-bottom: 35px;
         }
 
         .posfra-button:hover {
