--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
             background-position: center center;
             background-color: #136CFA;
             color: white;
-            padding: 12px 24px;
-            min-width: 250px;
-            min-height: 50px;
+            width: 250px;
+            height: 50px;
             border-radius: 8px;
             border: none;
             font-size: 16px;
@@ -92,9 +91,10 @@
         }
     </style>
 
+    <!-- data-embed-token="f419128e528d75174399b3662a2e0caaed29b98a59cbc9d33601fa2f903c1b6f" -->
     <div
         class="posfra"
-        data-embed-token="f419128e528d75174399b3662a2e0caaed29b98a59cbc9d33601fa2f903c1b6f"
+        data-embed-token="test-5b168df0b194edfd0eda4f7d12b967478c7d931317cbc1dbc873f32f29f8c2bb"
         data-amount="0.002"
     ></div>
 </body>
